--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,12 @@ android {
 
 dependencies {
 
+    def koin_version= "3.2.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation "io.insert-koin:koin-android:$koin_version"
 }
