--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MegaTask"
         android:windowSoftInputMode="stateHidden"
+        android:name=".App"
         tools:targetApi="31">
         <activity
             android:name=".view.MainActivity"
